# example_ekb

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml  readme.md  requirements.in  requirements.txt  setup.cfg
.github/workflows/: build.yaml  ci-cd.yaml
app/: database.py  main.py  router.py
app/api/codes/: exceptions.py  repository.py  router.py  schemas.py  services.py  utils.py
app/api/common/: repository.py  services.py  utils.py
app/api/products/: router.py
app/api/shift_tasks/: exceptions.py  repository.py  router.py  schemas.py  services.py  utils.py
app/api/test_router_api/: router.py
app/config/: config.py
app/models/: __init__.py  code.py  shift_task.py
app/tests/: conftest.py  mock_codes.json  mock_tasks.json
app/tests/integration_tests/test_codes/: test_api.py
app/tests/integration_tests/test_shift_tasks/: test_api.py
app/tests/unit_tests/test_codes/: test_dao.py
app/tests/unit_tests/test_shift_tasks/: test_dao.py
app/tests/unit_tests/test_utils/: test_search.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 1176791584d2_init.py  65190bf9c816_init_migrations.py  6b6da5c16d70_init_migrations.py  a0d71f9983ec_add_code.py  ce99ba7db68f_init.py  dea40de81a34_init.py
