[tool.poetry]
name = "example-ekb"
version = "0.1.0"
description = ""
authors = ["Erofeev Nikita <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit= "^3.3.3"
flake8 = "^7.0.0"
black= "^24.1.1"
isort= "^5.13.2"
pytest-asyncio= "^0.23.5"
pytest = "^8.0.0"
httpx= "^0.26.0"
sqlalchemy = "^2.0.25"
python-dotenv= "^1.0.1"
pydantic-settings= "^2.1.0"
pydantic-core= "^2.16.2"
fastapi="^0.109.2"
asyncpg= "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    '*/migrations/*',
    '*/docker/*',
    'app/models/__init__.py',
    '*/venv/*',
    '*/env/*',
    '*/tests/*',
]


[tool.black]
line-length = 80
skip-string-normalization = true
#exclude = ['__init__.py']
exclude = '''
\\.git
|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|\\*/docker/\\*
|venv
|env
|\\*/tests/\\*
'''



[tool.flake8]
max-line-length = 80
exclude = '''
\\.git
|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|\\*/docker/\\*
|venv
|env
|\\*/tests/\\*
'''
