[tool.poetry]
name = "example-ekb"
version = "0.1.0"
description = ""
authors = ["Erofeev Nikita <erofeev.nik.it@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 80
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git',
    '__pycache__',
    '*.yml.enc',
    '*/migrations/*',
    '*/docker/*',
    'app/models/__init__.py',
    '*/venv/*',
    '*/env/*',
]


[tool.black]
line-length = 80
skip-string-normalization = true
#exclude = ['__init__.py']
exclude = '''
\\.git
|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|\\*/docker/\\*
|venv
|env
'''



[tool.flake8]
max-line-length = 80
exclude = '''
\\.git
|__pycache__
|\\.yml\\.enc
|\\*/migrations/\\*
|\\*/docker/\\*
|venv
|env
'''
